crates/config/tests/snapshots/block_string_0_folded_strip_none_eof_nonl.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-0-folded-strip-none-eof-nonl

## Input

```mical
key >-
```

## JSON

```json
{
  "key": ""
}
```

vim:ft=markdown
