crates/config/tests/snapshots/block_string_0_folded_strip_wsln_eof.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-0-folded-strip-wsln-eof

## Input

```mical
key >-
 

```

## JSON

```json
{
  "key": ""
}
```

vim:ft=markdown
